--- a/app/frontend/assets/styles/_base.scss
+++ b/app/frontend/assets/styles/_base.scss
@@ -611,9 +611,10 @@ dl {
 .list--blocks-horizontal {
     @include list-clean();
     display: flex;
+    flex-wrap: wrap;
+    gap: 1rem;
     margin-bottom: 100px;
     li {
-        margin: 0 0 0 0.25rem;
         padding: $input-padding-x;
         border: 1px solid $gray-tint04;
         position: relative;
