--- a/app/frontend/assets/styles/components/_page-beheer.scss
+++ b/app/frontend/assets/styles/components/_page-beheer.scss
@@ -48,12 +48,19 @@
         h1 {
             margin-top: 0;
         }
+
         .btn {
             max-width: 200px;
             height: 48px;
 
             &.btn-240 {
                 max-width: 240px;
+            }
+
+            &-action {
+                svg {
+                    padding-left: 12px;
+                }
             }
         }
 
@@ -68,11 +75,25 @@
     }
 
     table tbody {
-        th,
         td {
             text-align: left;
-            padding-left: 0.5rem;
-            padding-right: 0.5rem;
+            padding-left: 0;
+            padding-right: 1rem;
+        }
+
+        td {
+            padding-top: 0.5rem;
+            vertical-align: top;
+
+            > ul,
+            > p {
+                margin: 0;
+                padding: 0;
+            }
+
+            > ul {
+                padding-left: 1rem;
+            }
         }
 
         .close {
