--- a/app/frontend/assets/styles/components/_imageSlider.scss
+++ b/app/frontend/assets/styles/components/_imageSlider.scss
@@ -37,13 +37,11 @@
 }
 
 .container__imageslider {
-    overflow-x: auto;
-    scroll-snap-type: x mandatory;
-    scroll-behavior: smooth;
+    overflow-x: hidden;
     width: calc(100% + 2px);
     transform: translateX(-1px);
-    -webkit-overflow-scrolling: touch;
     cursor: zoom-in;
+    margin-bottom: 1rem;
 
     .imageslider {
         display: flex;
@@ -54,7 +52,6 @@
     .container__image {
         width: 100%;
         background-color: $gray-tint02;
-        scroll-snap-align: center;
         display: flex;
         box-sizing: border-box;
         margin: 0 1px;
@@ -91,8 +88,10 @@
 .container__thumbs {
     padding: 16px 0 0;
     white-space: nowrap;
-    overflow-x: scroll;
+    overflow-x: auto;
+    overflow-y: hidden;
     position: relative;
+    box-sizing: border-box;
 
     ul {
         list-style: none;
@@ -101,13 +100,12 @@
 
         li {
             display: inline-block;
-            margin: 0 8px;
+            margin: 0 6px;
             cursor: pointer;
 
             &.selected {
                 .container__image {
                     opacity: 1;
-                    outline: 2px solid $primary;
                 }
             }
 
@@ -124,7 +122,7 @@
 
         ul {
             position: absolute;
-            top: 16px;
+            top: 0;
             left: 2px;
             transition: left, 0.5s;
         }
@@ -166,17 +164,6 @@
             background-color: $gray-tint02;
             outline: none;
             opacity: 1;
-
-            // .image {
-            //     width: 100%;
-            //     height: 0;
-            //     padding-bottom: 100%;
-            //     display: block;
-            //     margin: auto;
-            //     background-size: cover;
-            //     background-position: 50% 50%;
-            //     background-repeat: no-repeat;
-            // }
         }
     }
 }
