Bugfix headerheight not set with insufficient rights

--- a/app/apps/main/templates/melding/melding_gebruiker_actief.html
+++ b/app/apps/main/templates/melding/melding_gebruiker_actief.html
@@ -6,7 +6,7 @@
          data-meldingGebruiker-mercure-subscriber-token-value="{{ MERCURE_SUBSCRIBER_TOKEN }}"
          class="section--separated"
          data-testid=""
-         style="display: none">
+         style="display: none;">
     {% if perms.authorisatie.medewerker_gegevens_bekijken %}
         <div class="alert alert--warning">
             <span>
