--- a/app/frontend/assets/styles/components/_forms.scss
+++ b/app/frontend/assets/styles/components/_forms.scss
@@ -70,7 +70,8 @@ fieldset {
         }
     }
     &.hide {
-        display: none;
+        visibility: hidden;
+        max-height: 0;
     }
 }
 
