Styling radio-buttons and labels

--- a/app/apps/main/templates/melding/detail/melding_detail_titel.html
+++ b/app/apps/main/templates/melding/detail/melding_detail_titel.html
@@ -41,7 +41,7 @@
                     / {{ melding.resolutie }}
                     / {{ melding.afhandelreden }}
                     / {{ melding.specificatie.naam }}
-                {% else %}
+                {% endif %}
             </span>
         {% endif %}
         {% if melding.urgentie >= 0.5 %}
