--- a/app/frontend/assets/styles/components/_alert.scss
+++ b/app/frontend/assets/styles/components/_alert.scss
@@ -81,6 +81,14 @@
                 border-radius: 100%;
             }
         }
+
+        &--opgelost {
+            background-color: $green-200;
+
+            &::before {
+                background-color: $green-900;
+            }
+        }
     }
 
     h1 & {
@@ -122,7 +130,7 @@
         }
     }
 
-    &--opgelost {
+    &--in_behandeling {
         background-color: $green-200;
 
         &::before {
@@ -130,9 +138,17 @@
         }
     }
 
+    &--niet-opgelost {
+        background-color: $red-300;
+
+        &::before {
+            background-color: $red-900;
+        }
+    }
+
     &--voltooid,
+    &--opgelost,
     &--geannuleerd,
-    &--niet-opgelost,
     &--niet-gevonden {
         background-color: $gray-200;
 
