--- a/app/frontend/assets/styles/components/_forms.scss
+++ b/app/frontend/assets/styles/components/_forms.scss
@@ -326,6 +326,7 @@ textarea {
     }
     label {
         font-weight: 400;
+        font-size: 0.778rem;
 
         &:has(input:disabled) {
             color: $text-muted;
@@ -333,14 +334,20 @@ textarea {
         }
 
         &:has(input[type="radio"]) {
-            padding-left: calc(1rem + 8px);
+            // padding-left: calc(1rem + 8px);
             display: block;
 
             input[type="radio"] {
-                margin-left: calc(-1rem - 8px);
+                // margin-left: -12px;
+                width: 0.778rem;
+                height: 0.778rem;
+                margin-top: 0;
             }
             small {
-                display: block;
+                font-size: 0.667rem;
+                display: inline-block;
+                padding-left: 8px;
+                color: $gray-800;
             }
         }
     }
@@ -1411,5 +1418,63 @@ form.taken-aanmaken {
                 }
             }
         }
+    }
+}
+
+.btn-row {
+    &--horizontal {
+        display: flex;
+        justify-content: space-between;
+
+        .btn {
+            flex: 0;
+        }
+    }
+}
+
+.fieldset--separated:not(.hide) {
+    background-color: $white;
+    padding: 20px;
+    margin-bottom: 20px;
+
+    ul {
+        margin-bottom: 0;
+        li {
+            margin-bottom: 0.5rem;
+        }
+    }
+
+    .form-control__with-helptext {
+        .form-control,
+        .help-block {
+            font-size: 0.778rem;
+        }
+    }
+}
+
+.fieldset--separated {
+    &.hide {
+        * {
+            display: none;
+        }
+    }
+}
+
+.input--separated {
+    li {
+        border: 1px solid $blue-200;
+        margin-bottom: 8px;
+
+        &:last-child {
+            margin-bottom: 0;
+        }
+
+        label {
+            padding: 14px;
+        }
+    }
+
+    .form-control__with-helptext + .form-control__with-helptext {
+        margin-top: 16px;
     }
 }
