--- a/app/frontend/assets/styles/components/_pagination.scss
+++ b/app/frontend/assets/styles/components/_pagination.scss
@@ -68,6 +68,7 @@
                     display: block;
                     width: 32px;
                     cursor: pointer;
+                    padding-left: 0;
 
                     &:hover,
                     &:has(input:checked) {
