--- a/app/frontend/assets/styles/_base.scss
+++ b/app/frontend/assets/styles/_base.scss
@@ -824,6 +824,10 @@ body.no-js {
     padding-bottom: 0.5em;
 }
 
+.padding-bottom-0 {
+    padding-bottom: 0 !important;
+}
+
 .margin-bottom {
     margin-bottom: 1rem;
 }
