--- a/app/frontend/assets/styles/components/_modal.scss
+++ b/app/frontend/assets/styles/components/_modal.scss
@@ -165,20 +165,27 @@ body.show-modal--first-filter {
         }
     }
 
-    &-footer {
-    }
-
     &-body {
         padding: 0 $container-padding-x $container-padding-x;
     }
 
-    &-footer {
+    &-footer:not(:has(.btn-row--horizontal)) {
         display: flex;
         flex-wrap: wrap;
         flex-shrink: 0;
         align-items: center;
         justify-content: flex-end;
         padding: $alert-padding-x;
+    }
+
+    &-footer--sticky {
+        border-top: 1px solid $blue-200;
+        padding: 1rem 1.5rem 0;
+        margin: 0 -1.5rem;
+
+        button {
+            margin-bottom: 0;
+        }
     }
 
     &-backdrop {
@@ -192,6 +199,22 @@ body.show-modal--first-filter {
         opacity: 0;
         visibility: hidden;
         transition: all 0.5s ease;
+    }
+}
+
+.wrapper-sticky-footer {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+
+    .flex-content {
+        overflow-y: auto;
+        flex: 1 1 auto;
+        height: 100%;
+    }
+
+    .modal-footer--sticky {
+        flex-shrink: 0;
     }
 }
 
