--- a/app/frontend/assets/styles/components/_modal.scss
+++ b/app/frontend/assets/styles/components/_modal.scss
@@ -1,5 +1,5 @@
 dialog {
-    max-height: calc(100% - 3em);
+    max-height: calc(100% - 60px);
     border-style: none;
     padding: 0;
     align-items: center;
@@ -29,6 +29,31 @@ dialog {
     }
 
     z-index: 2500;
+
+    &:has(.wrapper-sticky-footer) {
+        height: 100%;
+
+        .modal-body {
+            display: flex;
+            flex: 1 0 auto;
+            flex-direction: column;
+            section {
+                display: flex;
+                flex: 1 0 auto;
+                flex-direction: column;
+
+                form {
+                    display: flex;
+                    flex: 1 0 auto;
+                    flex-direction: column;
+
+                    .wrapper-sticky-footer {
+                        flex: 1 0 auto;
+                    }
+                }
+            }
+        }
+    }
 }
 ::backdrop {
     position: relative;
@@ -167,6 +192,12 @@ body.show-modal--first-filter {
 
     &-body {
         padding: 0 $container-padding-x $container-padding-x;
+
+        .container__details {
+            h2 {
+                color: $black;
+            }
+        }
     }
 
     &-footer:not(:has(.btn-row--horizontal)) {
@@ -205,16 +236,18 @@ body.show-modal--first-filter {
 .wrapper-sticky-footer {
     display: flex;
     flex-direction: column;
-    height: 100%;
+    // height: 100%;
 
     .flex-content {
-        overflow-y: auto;
         flex: 1 1 auto;
-        height: 100%;
+        overflow-y: scroll;
+        scroll-behavior: smooth;
+        // max-height: 1010px;
     }
 
     .modal-footer--sticky {
         flex-shrink: 0;
+        box-sizing: border-box;
     }
 }
 
