Styling action-buttons, cssfix pagination

--- a/app/apps/main/templates/melding/detail/melding_afhandelen.html
+++ b/app/apps/main/templates/melding/detail/melding_afhandelen.html
@@ -63,7 +63,7 @@
                     <button type="reset" class="btn btn-tertiary" data-action="modal#closeModal">
                         <span>Annuleren</span>
                     </button>
-                    <button type="submit" class="btn btn-action">
+                    <button type="submit" class="btn btn-action-v2">
                         <span>Afhandelen</span>
                     </button>
                 </div>
