--- a/app/apps/main/templates/melding/detail/melding_heropenen.html
+++ b/app/apps/main/templates/melding/detail/melding_heropenen.html
@@ -42,7 +42,7 @@
                     <button type="reset" class="btn btn-tertiary" data-action="modal#closeModal">
                         <span>Annuleren</span>
                     </button>
-                    <button type="submit" class="btn btn-action">
+                    <button type="submit" class="btn btn-action-v2">
                         <span>Heropenen</span>
                     </button>
                 </div>
