--- a/app/apps/main/templates/melding/detail/melding_pauzeren.html
+++ b/app/apps/main/templates/melding/detail/melding_pauzeren.html
@@ -67,7 +67,7 @@
                         <span>Annuleren</span>
                     </button>
                     <button type="submit"
-                            class="btn btn-action"
+                            class="btn btn-action-v2"
                             {% if actieve_taken %}disabled{% endif %}>
                         <span>Pauzeren</span>
                     </button>
