--- a/app/apps/main/templates/melding/detail/locatie_aanpassen.html
+++ b/app/apps/main/templates/melding/detail/locatie_aanpassen.html
@@ -140,7 +140,7 @@
                         <button disabled
                                 data-locatieaanpassenformulier-target="submitButton"
                                 type="submit"
-                                class="btn btn-action">
+                                class="btn btn-action-v2">
                             <span>Opslaan</span>
                         </button>
                     </div>
