--- a/app/apps/main/templates/melding/detail/melding_hervatten.html
+++ b/app/apps/main/templates/melding/detail/melding_hervatten.html
@@ -37,7 +37,7 @@
                     <button type="reset" class="btn btn-tertiary" data-action="modal#closeModal">
                         <span>Annuleren</span>
                     </button>
-                    <button type="submit" class="btn btn-action">
+                    <button type="submit" class="btn btn-action-v2">
                         <span>Hervatten</span>
                     </button>
                 </div>
