--- a/app/apps/main/templates/melding/detail/taak_afronden.html
+++ b/app/apps/main/templates/melding/detail/taak_afronden.html
@@ -25,7 +25,7 @@
                 <button type="reset" class="btn btn-tertiary" data-action="modal#closeModal">
                     <span>Annuleren</span>
                 </button>
-                <button type="submit" class="btn btn-action">
+                <button type="submit" class="btn btn-action-v2">
                     <span>Taak afronden</span>
                 </button>
             </div>
