--- a/app/apps/main/templates/melding/detail/taken_aanmaken.html
+++ b/app/apps/main/templates/melding/detail/taken_aanmaken.html
@@ -135,7 +135,7 @@
                                 <button type="reset" class="btn btn-tertiary" data-controller="detail" data-action="modal#closeModal" data-modal-target="modal">
                                     <span>Annuleren</span>
                                 </button>
-                                <button type="submit" class="btn btn-action">
+                                <button type="submit" class="btn btn-action-v2">
                                     <span>{{ form.submit_label }}</span>
                                 </button>
                     </div> {% endcomment %}
