--- a/app/frontend/assets/styles/components/_pagination.scss
+++ b/app/frontend/assets/styles/components/_pagination.scss
@@ -80,8 +80,8 @@
                 }
 
                 input {
-                    width: 0;
-                    height: 0;
+                    width: 0 !important;
+                    height: 0 !important;
                     position: absolute;
                     border: 0;
                     box-shadow: none;
