--- a/app/apps/main/templates/melding/detail/melding_annuleren.html
+++ b/app/apps/main/templates/melding/detail/melding_annuleren.html
@@ -64,8 +64,6 @@
             <form action="{% url 'melding_annuleren' melding.uuid %}"
                   method="post"
                   class="form--horizontal"
-                  data-controller="meldingbehandelformulier"
-                  data-meldingbehandelformulier-target="meldingBehandelFormulier"
                   data-turbo-frame="_top"
                   enctype="multipart/form-data"
                   novalidate>
@@ -76,7 +74,7 @@
                         <span>Annuleren</span>
                     </button>
                     <button type="submit" class="btn btn-action-v2">
-                        <span>Afhandelen</span>
+                        <span>Melding annuleren</span>
                     </button>
                 </div>
             </form>
