--- a/app/apps/main/templates/melding/detail/melding_afhandelen_form.html
+++ b/app/apps/main/templates/melding/detail/melding_afhandelen_form.html
@@ -70,9 +70,9 @@
                             <div class="form-control__with-helptext js-validation">{{ form.specificatie|render_rotterdam_formulier }}</div>
                         </fieldset>
 
-                        <fieldset class="fieldset--separated" data-meldingbehandelformulier-target="standaardtextContainer">
+                        <fieldset class="fieldset--separated" data-meldingbehandelformulier-target="standaardtekstContainer">
                             <h2>Bericht aan de melder</h2>
-                            <div class="form-control__with-helptext js-validation">{{ form.standaardtext|render_rotterdam_formulier }}</div>
+                            <div class="form-control__with-helptext js-validation">{{ form.standaardtekst|render_rotterdam_formulier }}</div>
                             <div class="form-control__with-helptext js-validation margin-top">{{ form.omschrijving_extern|render_rotterdam_formulier }}</div>
                         </fieldset>
                     </div>
