--- a/app/apps/main/templates/melding/detail/melding_afhandelen_form.html
+++ b/app/apps/main/templates/melding/detail/melding_afhandelen_form.html
@@ -54,7 +54,7 @@
                                         {% else %}
                                             taken
                                         {% endif %}
-                                    aangepast naar ‘Voltooid’.</span>
+                                    aangepast naar ‘Geannuleerd’.</span>
                                 </div>
                             </div>
                         {% endif %}
