fix: afhandelreden & standaard tekst

--- a/app/apps/beheer/templates/beheer/melding_afhandelreden_form.html
+++ b/app/apps/beheer/templates/beheer/melding_afhandelreden_form.html
@@ -48,7 +48,7 @@
                     <ul>
                     {% for standaard_externe_omschrijving in standaard_externe_omschrijving_lijst %}
                     <li>
-                        {{ standaard_externe_omschrijving.titel }}<a href="{{ standaard_externe_omschrijving.url }}">(aanpassen)</a>
+                        {{ standaard_externe_omschrijving.titel }}<a href="{{ standaard_externe_omschrijving.aanpassen_url }}">(aanpassen)</a>
                     </li>
                     {% endfor %}
                     </ul>
