--- a/app/apps/main/templates/melding/detail/melding_afhandelen_form.html
+++ b/app/apps/main/templates/melding/detail/melding_afhandelen_form.html
@@ -55,7 +55,7 @@
                                             {% else %}
                                                 taken
                                             {% endif %}
-                                        aangepast naar ‘Voltooid’.</span>
+                                        aangepast naar ‘Geannuleerd’.</span>
                                     {% elif not form.niet_opgelost_reden.field.choices|length %}
                                         Er zijn geen afhandelredenen ingesteld!<br>
                                         Vraag een functioneelbeheerder om deze aan te maken.
