--- a/app/apps/main/templates/melding/detail/taken.html
+++ b/app/apps/main/templates/melding/detail/taken.html
@@ -3,6 +3,7 @@
 {% load humanize %}
 {% load mor_core_url from main_tags %}
 {% load get taak_status_tekst taak_status_css_class api_url_to_user_url from melding_tags %}
+{% load vertaal from vertaal_tags %}
 
 {% if view.is_stream %}
 <turbo-stream target="melding_detail_taken" action="update">
@@ -126,15 +127,21 @@
                             </div>
                             {% if taak.afgesloten_op and not taak.verwijderd_op %}
                                 <div class="container__content">
+                                {% if laatste_taakgebeurtenis.resolutie or laatste_taakgebeurtenis.omschrijving_intern or laatste_taakgebeurtenis.bijlagen %}
                                     <h3>Informatie uitvoerder</h3>
                                     <div class="content">
-                                        <p>Resolutie: {{ taak.resolutie }}<br>
-                                        {% if laatste_taakgebeurtenis.omschrijving_intern %}
-                                            {{ laatste_taakgebeurtenis.omschrijving_intern }}
-                                        {% else %}
-                                            Er is geen opmerking toegevoegd
+                                        {% if laatste_taakgebeurtenis.resolutie %}
+                                            <div class="message">
+                                                <h4>Reden:</h4>
+                                                <p class="margin-bottom">{{ laatste_taakgebeurtenis.resolutie|vertaal }}</p>
+                                            </div>
                                         {% endif %}
-                                        </p>
+                                        {% if laatste_taakgebeurtenis.omschrijving_intern %}
+                                            <div class="message">
+                                                <h4>Opmerking:</h4>
+                                                <p class="margin-bottom">{{ laatste_taakgebeurtenis.omschrijving_intern }}</p>
+                                            </div>
+                                        {% endif %}
                                         {% if laatste_taakgebeurtenis.bijlagen %}
                                             <div class="container__thumbs">
                                                 <ul>
@@ -149,11 +156,9 @@
                                                     {% endfor %}
                                                 </ul>
                                             </div>
-                                        {% else %}
-                                            <p>Er zijn geen finish foto's mee gestuurd bij het afronden van de taak</p>
                                         {% endif %}
-                                        <small>{{ laatste_taakgebeurtenis.aangemaakt_op|to_datetime|naturalday_with_time_or_timesince }}</small>
                                     </div>
+                                {% endif %}
                                 </div>
                             {% elif taak.verwijderd_op %}
                                 <div class="container__content">
