--- a/app/apps/main/templates/standaard_externe_omschrijving/standaard_externe_omschrijving_form.html
+++ b/app/apps/main/templates/standaard_externe_omschrijving/standaard_externe_omschrijving_form.html
@@ -45,12 +45,32 @@
                     <fieldset>
                         <div class="form-control__with-helptext js-validation">{{ form.zichtbaarheid|render_rotterdam_formulier }}</div>
                     </fieldset>
+                    {% if melding_afhandelreden_lijst %}
                     <fieldset data-externeomschrijvingformulier-target="nietOpgelostContainer">
                         <div class="form-control__with-helptext js-validation">{{ form.reden|render_rotterdam_formulier }}</div>
                     </fieldset>
                     <fieldset data-externeomschrijvingformulier-target="nietOpgelostSpecificatiesContainer">
                         <div class="form-control__with-helptext js-validation">{{ form.specificatie_opties|render_rotterdam_formulier }}</div>
                     </fieldset>
+                    {% else %}
+                    <div class="alert alert--warning">
+                        <span>
+                            <svg width="32"
+                                height="32"
+                                viewBox="0 0 32 32"
+                                fill="none"
+                                xmlns="http://www.w3.org/2000/svg">
+                                <path fill-rule="evenodd" clip-rule="evenodd" d="M16.0001 6.21851L26.6516 26L5.34849 26L16.0001 6.21851ZM14.2391 5.2703C14.9943 3.8679 17.0059 3.86791 17.761 5.27031L28.4126 25.0518C29.13 26.3843 28.165 28 26.6516 28H5.34849C3.83514 28 2.87007 26.3842 3.58755 25.0518L14.2391 5.2703ZM15.0001 12H17.0001V20H15.0001V12ZM15.0001 24V22H17.0001V24H15.0001Z" fill="#A65600" />
+                            </svg>
+                        </span>
+                        <div>
+                            <span>
+                                Er zijn nog geen afhandelredenen ingesteld voor de resolutie `Niet opgelost`, daarom is deze optie niet beschikbaar.<br>
+                                Vraag een functioneelbeheerder om deze in te stellen.
+                            </span>
+                        </div>
+                    </div>
+                    {% endif %}
                     <div class="form-row container__button">
                         <div class="form-row btn-row">
                             <button type="reset"
