--- a/app/apps/context/templates/standaard/melding_detail_acties.html
+++ b/app/apps/context/templates/standaard/melding_detail_acties.html
@@ -13,6 +13,14 @@
             {% melding_taken melding as taak_info %}
                 <ul class="list-clean">
                     <li>
+                        <button type="button"
+                                class="btn btn-icon"
+                                data-action="detail#openLogboek">
+                                {% include "icons/pause_circle.svg" %}
+                            Toon logboek
+                        </button>
+                    </li>
+                    <li>
                         {% if perms.authorisatie.melding_pauzeren and melding.status.naam != "pauze" and melding.status.naam != "wachten_melder" %}
                             <button type="button"
                                     class="btn btn-icon"
