--- a/app/apps/dashboard/templates/dashboard/afgehandeld/dashboard.html
+++ b/app/apps/dashboard/templates/dashboard/afgehandeld/dashboard.html
@@ -117,7 +117,7 @@
                 data-action="sidesheet#closeSidesheet">{% include "icons/close.svg" %}</button>
         <div class="sidesheet-backdrop sidesheet-exit"
              data-action="click->sidesheet#closeSidesheet"></div>
-        <div class="turboframe-container">
+        <div class="turboframe-container">haai
             <turbo-frame id="sidesheet" data-sidesheet-target="turboframe"></turbo-frame>
         </div>
     </div>
